--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p class="text-slate-600 mb-4">
                         A single page visualization on comparison of various energy sources operating costs to operate most popular size water heater in US homes (50 gallon).
                     </p>
-                    <a href="./energy-study/" class="inline-block bg-green-600 text-white font-medium py-2 px-4 rounded-md hover:bg-green-700 transition-colors duration-300">
+                    <a href="./water-heater-sources/" class="inline-block bg-green-600 text-white font-medium py-2 px-4 rounded-md hover:bg-green-700 transition-colors duration-300">
                         View Study &rarr;
                     </a>
                 </div>
